--- a/app/src/components/shared/toast/toast.component.html
+++ b/app/src/components/shared/toast/toast.component.html
@@ -2,5 +2,5 @@
   <span>
     {{toastMessage}}
   </span>
-  <i class="material-icons" (click)="closeToast()">close</i>
+  <button mat-icon-button><mat-icon class="material-icons" (click)="closeToast()">close</mat-icon></button>
 </div>
