--- a/app/src/components/buyer/buyerDashboard.component.html
+++ b/app/src/components/buyer/buyerDashboard.component.html
@@ -17,8 +17,14 @@
           <div class="mat-card-title" *ngIf="!offerSent">
             <span class="primary-color">{{sellerItem.name}}</span> - ${{sellerItem.price}}.00
           </div>
+          <div class="offer-info-container" [ngClass]="{'item-available': !sellerItem.accepted , 'item-not-available' : sellerItem.accepted}">
+            <mat-icon style="margin-right:10px" *ngIf="!sellerItem.accepted">check_circle</mat-icon>
+            <span *ngIf="!sellerItem.accepted">This item is still available</span>
+            <mat-icon style="margin-right:10px" *ngIf="sellerItem.accepted">error</mat-icon>
+            <span *ngIf="sellerItem.accepted">This item has an accepted offer, and pending pickup</span>
+          </div>
           <div class="mat-card-container" *ngIf="!offerSent">
-            <div class="mat-card-ref">
+            <div class="mat-card-ref provide-space">
               <mat-form-field class="read-only">
             <textarea matInput readonly placeholder="Description" matTextareaAutosize matAutosizeMinRows="0"
                       matAutosizeMaxRows="10" [value]="sellerItem.description"></textarea>
@@ -67,7 +73,7 @@
               <div class="explanation-container">
                 Your offer is expected to have {{spinnerValue}}% chance of being accepted by the seller
               </div>
-              <button mat-button color="primary" [disabled]="!offerControl.valid" (click)="sendOffer()">SEND OFFER
+              <button mat-button color="primary" [disabled]="!offerControl.valid" (click)="sendOffer()">{{sellerItem.accepted ? 'JOIN WAIT LIST' : 'SEND OFFER'}}
               </button>
             </div>
           </div>
