--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -2,7 +2,7 @@
   <div class="title-row">
     <h2 class="title" *ngIf="!itemCreated">{{createItem ? 'Create Item' : 'Edit Item'}}</h2>
     <h2 class="title" *ngIf="itemCreated">Item Created</h2>
-    <button mat-icon-button (click)="close()">
+    <button mat-icon-button class="icon-button" (click)="close()">
       <mat-icon>close</mat-icon>
     </button>
   </div>
@@ -21,15 +21,15 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field>
-          <input matInput required placeholder="Major Intersection" type="text" formControlName="address"
+          <input matInput required placeholder="Closest Intersection" type="text" formControlName="address"
                  id="addressField" tabindex="0"/>
           <mat-error *ngIf="itemFormControl.get('address').hasError('required')">
-            Please provide an address
+            Please provide closest intersection nearest meetup
           </mat-error>
-          <mat-hint class="right-align">Closest Intersection</mat-hint>
+          <mat-hint class="right-align">Nearest Meetup</mat-hint>
         </mat-form-field>
         <mat-form-field>
-  <textarea matInput placeholder="Description" matTextareaAutosize matAutosizeMinRows="0"
+  <textarea matInput placeholder="Description of Item" matTextareaAutosize matAutosizeMinRows="0"
             matAutosizeMaxRows="10" formControlName="description"></textarea>
           <mat-error *ngIf="itemFormControl.get('description').hasError('required')">
             Please provide a description
