--- a/app/src/components/seller/sellerDashboard.component.html
+++ b/app/src/components/seller/sellerDashboard.component.html
@@ -15,7 +15,7 @@
       <mat-card class="mat-card-ref" *ngFor="let item of sellersItems; let i = index">
         <mat-card-title class="card-title-row">
           <div class="card-title"><span>{{item.name}}</span> - ${{item.price}} <mat-icon class="primary-color" *ngIf="item.offerAccepted">checked</mat-icon></div>
-          <button mat-icon-button color="primary" (click)="openConfirmationModal(item['id'], i)">
+          <button mat-icon-button color="primary" class="icon-button" (click)="openConfirmationModal(item['id'], i)">
             <mat-icon>delete</mat-icon>
           </button>
         </mat-card-title>
