Updated buyer service; Re-added pwa

--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -8,8 +8,9 @@
   </div>
   <div class="item-content-container">
     <div class="form-container" *ngIf="itemCreated" style="margin-bottom:20px;" id="itemCreatedTxt">
+      <p>Please copy the text below and paste it into your ad: </p>
       <p id="createTxt">
-        Your item was created, please copy and paste this link into your seller site: <span class="primary-color">{{itemLink}}</span>
+        Want to know if the item is still available? Click here <span class="primary-color">{{itemLink}}</span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller
       </p>
     </div>
     <div class="form-container" *ngIf="!itemCreated">
