--- a/app/src/components/shared/loginPage/login.component.html
+++ b/app/src/components/shared/loginPage/login.component.html
@@ -38,7 +38,7 @@
           Your Password?</a></div>
         <div class="request-container">
           <span>Don't have an account? <a class="primary-color"
-                                          (click)="loginView = !loginView">Request Access</a></span>
+                                          (click)="loginView = !loginView">Create Account</a></span>
 
         </div>
       </div>
