--- a/app/src/components/buyer/buyerDashboard.component.html
+++ b/app/src/components/buyer/buyerDashboard.component.html
@@ -21,7 +21,7 @@
             <mat-icon style="margin-right:10px" *ngIf="!sellerItem.accepted">check_circle</mat-icon>
             <span *ngIf="!sellerItem.accepted">This item is still available</span>
             <mat-icon style="margin-right:10px" *ngIf="sellerItem.accepted">error</mat-icon>
-            <span *ngIf="sellerItem.accepted">This item has an accepted offer, and pending pickup</span>
+            <span *ngIf="sellerItem.accepted">This item has been sold pending pickup. Enter your email and offer to be automatically notified if the buyer falls through</span>
           </div>
           <div class="mat-card-container" *ngIf="!offerSent">
             <div class="mat-card-ref provide-space">
@@ -64,8 +64,9 @@
                 </div>
                 <div>
                   <mat-form-field>
-                      <textarea matInput placeholder="Buyer Message" matTextareaAutosize matAutosizeMinRows="1"
+                      <textarea matInput placeholder="Message Seller" matTextareaAutosize matAutosizeMinRows="1"
                                 matAutosizeMaxRows="5" formControlName="message"></textarea>
+                    <mat-hint>Ex: 'I can come today'</mat-hint>
                   </mat-form-field>
                 </div>
               </form>
