--- a/app/src/components/seller/sellerDashboard.component.html
+++ b/app/src/components/seller/sellerDashboard.component.html
@@ -19,7 +19,8 @@
             <mat-icon>delete</mat-icon>
           </button>
         </mat-card-title>
-        <mat-card-subtitle><span class="accent-color">{{domain}}/item/{{item.url}}</span></mat-card-subtitle>
+        <mat-card-subtitle>
+          Want to know if the item is still available? Click here <span class="accent-color">{{domain}}/item/{{item.url}}</span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller.</mat-card-subtitle>
         <mat-card-content>
           <!--<div class="embed-link"><span class="primary-color" id="item-{{item.id}}">www.showsapp.com/{{item.url}}</span>-->
             <!--&lt;!&ndash;<button mat-icon-button (click)="clipBoardCopied(item.id)">&ndash;&gt;-->
