changed the email notifications template.

--- a/api/templates/notifications/common/reset_password.html
+++ b/api/templates/notifications/common/reset_password.html
@@ -2,13 +2,19 @@
 {% load notifications_tags %}
 
 {% block subject %}
+{{ subject }}
 {% endblock %}
 {% block body %}
 
 
-<p>Your password reset request has been received. Please click this <a href='{% settings_value "FRONTEND_DOMAIN" %}password_reset/{{ user.password_reset_token }}'>link</a> and you will be taken to a ShowsApp page where you will set a new password.</p>
+Your password reset request has been received. Please click this button below and you will be taken to a ShowsApp page where you will set a new password.<br/>
 
-<p>If you have not attempted to reset your password and have received this email, please forward to security@showsapp.com.</p>
+If you have not attempted to reset your password and have received this email, please forward to security@showsapp.com.<br/>
+
+
+{% endblock %}
+href='{% settings_value "FRONTEND_DOMAIN" %}password_reset/{{ user.password_reset_token }}'>Reset
+{% block cta %}
 
 
 {% endblock %}
