--- a/api/templates/notifications/common/welcome.html
+++ b/api/templates/notifications/common/welcome.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block body %}
 
-Thanks for registering with ShowsApp.com. Please activate your your account by clicking on the button below.
+Thanks for registering with ShowsApp.com. Please activate your account by clicking on the button below.
 
 {% endblock %}
 
