--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -10,7 +10,7 @@
     <div class="form-container" *ngIf="itemCreated" style="margin-bottom:20px;" id="itemCreatedTxt">
       <p>Please copy the text below and paste it into your ad: </p>
       <p id="createTxt">
-        Want to know if the item is still available? Click here <span class="primary-color">{{itemLink}}</span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller
+        Want to know if the item is still available? Click here <span class="primary-color"><a href="{{itemLink}}">{{itemLink}}</a></span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller
       </p>
     </div>
     <div class="form-container" *ngIf="!itemCreated">
