--- a/app/src/components/seller/sellerDashboard.component.html
+++ b/app/src/components/seller/sellerDashboard.component.html
@@ -21,7 +21,7 @@
           </button>
         </mat-card-title>
         <mat-card-subtitle>
-          Want to know if the item is still available? Click here <span class="accent-color">{{domain}}/item/{{item.url}}</span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller.</mat-card-subtitle>
+          Want to know if the item is still available? Click here <span class="accent-color"><a href="{{domain}}/item/{{item.url}}" target="_blank">{{domain}}/item/{{item.url}}</a></span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller.</mat-card-subtitle>
         <mat-card-content>
           <!--<div class="embed-link"><span class="primary-color" id="item-{{item.id}}">www.showsapp.com/{{item.url}}</span>-->
             <!--&lt;!&ndash;<button mat-icon-button (click)="clipBoardCopied(item.id)">&ndash;&gt;-->
