--- a/api/templates/markets/item.html
+++ b/api/templates/markets/item.html
@@ -13,8 +13,7 @@
   <meta property="og:type" content="profile" />
   <meta property="og:url" content='{% settings_value "DOMAIN" %}/item/{{ item.sa_user.id }}/{{ item.slug }}' />
   <meta property="og:image" content="https://s3.amazonaws.com/showsapp-static-production/static/showsapp.jpg" />
-  <meta property="og:description" content="{% if item.description != "" %}{{ item.description }}{% else %}This item is being sold on consignment. In order to be transparent with the consignor, this seller is required to receive all offers through the link above. If you are unable to click the link, or have questions for the seller, please contact them directly and they will answer your questions and share the link with you.{% endif %}
-  " />
+  <meta property="og:description" content="What's your lowest offer? Use ShowsApp to figure out the lowest offer with the highest expected chance of being accepted."/>
   <meta property="og:site_name" content="ShowsApp.com" />
 
 
