--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -17,10 +17,10 @@
       <form novalidate [formGroup]="itemFormControl">
 
         <mat-form-field>
-          <input matInput required placeholder="Product Name" type="text" formControlName="name"
+          <input matInput required placeholder="Headline: 6-10 words to describe the item's benefit to the buyer." type="text" formControlName="name"
                  id="productName" tabindex="0"/>
           <mat-error *ngIf="itemFormControl.get('name').hasError('required')">
-            Product name is required
+            Headline is required
           </mat-error>
         </mat-form-field>
         <mat-form-field>
