--- a/app/src/components/seller/sellerDashboard.component.html
+++ b/app/src/components/seller/sellerDashboard.component.html
@@ -21,7 +21,9 @@
           </button>
         </mat-card-title>
         <mat-card-subtitle>
-          Want to know if the item is still available? Click here <span class="accent-color"><a class="accent-color" href="{{domain}}/item/{{item.url}}" target="_blank">{{domain}}/item/{{item.url}}</a></span> and instantly get the answer. Want to know if your offer will be competitive? Try a no-commitment offer against the ShowsApp prediction engine before submitting to the seller.</mat-card-subtitle>
+          Please copy the link below and paste it into your ad. The link will generate your item's photo and default copy inviting buyers to test their offer's viability before sending it to you. Good luck with your sale.
+          <a href="{{domain}}/item/{{item.url}}" target="_blank"><span class="accent-color">{{domain}}/item/{{item.url}}</span></a>
+        </mat-card-subtitle>
         <mat-card-content>
           <!--<div class="embed-link"><span class="primary-color" id="item-{{item.id}}">www.showsapp.com/{{item.url}}</span>-->
             <!--&lt;!&ndash;<button mat-icon-button (click)="clipBoardCopied(item.id)">&ndash;&gt;-->
