--- a/api/templates/markets/item.html
+++ b/api/templates/markets/item.html
@@ -12,7 +12,7 @@
   <!-- <meta property="fb:app_id" content="{% settings_value "FACEBOOK_APP_ID" %}" />  -->
   <meta property="og:type" content="profile" />
   <meta property="og:url" content='{% settings_value "DOMAIN" %}/item/{{ item.sa_user.id }}/{{ item.slug }}' />
-  <meta property="og:image" content="https://s3.amazonaws.com/showsapp-static-production/static/showsapp.jpg" />
+  <meta property="og:image" content= "{% if item.images.first.gallery_photo_small_url %}{{ item.images.first.gallery_photo_small_url }}{% else %}https://s3.amazonaws.com/showsapp-static-production/static/showsapp.jpg{% endif %}" />
   <meta property="og:description" content="What's your lowest offer? Use ShowsApp to figure out the lowest offer with the highest expected chance of being accepted by the seller."/>
   <meta property="og:site_name" content="ShowsApp.com" />
 
