--- a/api/templates/markets/public_template_wrapper.html
+++ b/api/templates/markets/public_template_wrapper.html
@@ -14,5 +14,8 @@
    <h1>{{ item.name }}</h1>
    <p>{{ item.description }}</p>
 
+   {% if item.images.first.gallery_photo_small_url %}{{ item.images.first.gallery_photo_small_url }}{% else %}https://s3.amazonaws.com/showsapp-static-production/static/showsapp.jpg{% endif %}
+   {{ item.images.first.gallery_photo_small_url }}
+   {{ item.images.first }}
   </body>
 </html>
